# Karasu_IA

./: CMakeLists.txt
src/: main.cpp
src/core/: assistant.cpp  assistant.h
src/db/: database.cpp  database.h
src/nlp/: nlp.cpp  nlp.h
src/scheduler/: scheduler.cpp  scheduler.h
